<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_title_bar" >

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:padding="10dp"
            android:src="@drawable/back_iv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_20" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_table_one_row"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_below="@+id/title_layout" >
    <TextView
        android:id="@+id/about_varname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_vartxt"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_18" />    
    <TextView
        android:id="@+id/about_vartext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_var"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_18" />
    </LinearLayout>
 <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_table_one_row"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_below="@+id/linearLayout1" >
     
    <TextView
        android:id="@+id/about_shebei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_18" 
        android:text="@string/about_vartxtd"/>
 </LinearLayout>

    <ImageView
        android:id="@+id/about_varimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/aboutactivity_icon" />

</RelativeLayout>