<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_title_bar" >

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:padding="10dp"
            android:src="@drawable/back_iv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_smart_app"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_20" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-6dp"
        android:background="@drawable/adver_bg" />

    <LinearLayout
        android:id="@+id/remote_control_rel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/remote_control_icon_iv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="40dp"
            android:contentDescription="@null"
            android:src="@drawable/remote_control_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/remote_control_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remote_control"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_18" />

             <Button
                android:id="@+id/remote_control_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="invisible"
                android:background="@drawable/dow_btn" /> 
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/service_center_rel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/service_center_icon_iv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="40dp"
            android:contentDescription="@null"
            android:src="@drawable/service_center_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/service_center_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_area"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_18" />

           <Button
                android:id="@+id/service_center_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="invisible"
                android:background="@drawable/dow_btn" /> 
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/advertisement_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-5dp" >

        <android.support.v4.view.ViewPager
            android:id="@+id/advertisement_pager"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:id="@+id/dot_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>